// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVaultFactory EthErc20Vault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 599715,
}
`;

exports[`EthVaultFactory EthErc20Vault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 450896,
}
`;

exports[`EthVaultFactory EthErc20Vault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 575795,
}
`;

exports[`EthVaultFactory EthErc20Vault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 426976,
}
`;

exports[`EthVaultFactory EthVault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 525593,
}
`;

exports[`EthVaultFactory EthVault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 376774,
}
`;

exports[`EthVaultFactory EthVault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 501673,
}
`;

exports[`EthVaultFactory EthVault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 352854,
}
`;
